force-app/main/default/objects/LicenseTypeCashierCode__c/LicenseTypeCashierCode__c.object-meta.xml
<CustomObject>
    <description>PacPoint-KN081819 - Created for PVL Phase 1
PacPoint-FT082819 - Changed Name field from Text to AutoNun for PVL Phase 1</description>
    <label>License Type Cashier Code</label>
    <nameField>
        <displayFormat>LTCC-{0000}</displayFormat>
        <label>License Type Cashier Code Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>License Type Cashier Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>