force-app/main/default/objects/LicenseTypeCashierCode__c/fields/CashierCodeAmount__c.field-meta.xml
<CustomField>
    <fullName>CashierCodeAmount__c</fullName>
    <description>PacPoint-FT082819 - Created for PVL Phase 1</description>
    <formula>CashierCode__r.Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cashier Code Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>