force-app/main/default/objects/LicenseTypeCashierCode__c/fields/CashierCodeId__c.field-meta.xml
<CustomField>
    <fullName>CashierCodeId__c</fullName>
    <formula>CashierCode__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cashier Code Id</label>
    <type>Text</type>
</CustomField>