force-app/main/default/objects/LicenseTypeCashierCode__c/fields/Classification__c.field-meta.xml
<CustomField>
    <fullName>Classification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>PacPoint-KN01162019-Created for PVL Phase 1 Sprint 3</description>
    <label>Classification</label>
    <referenceTo>Classification__c</referenceTo>
    <relationshipLabel>License Type Cashier Codes</relationshipLabel>
    <relationshipName>License_Type_Cashier_Codes</relationshipName>
    <type>Lookup</type>
</CustomField>