force-app/main/default/objects/LicenseTypeCashierCode__c/fields/FeeAmount__c.field-meta.xml
<CustomField>
    <fullName>FeeAmount__c</fullName>
    <description>PacPoint-FT082919 - Created for PVL phase 1</description>
    <formula>IF(RenewalFeePercentage__c &gt; 0, 
( RenewalFeePercentage__c * CashierCodeAmount__c ) , 
 CashierCodeAmount__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is the Amount that will get charged to the Applicant or Licensee.  If the Renewal Fee % is populated, this will be the Renewal Fee % times the Cashier Code Amount.  Otherwise it will be set to the full Cashier Code Amount</inlineHelpText>
    <label>Fee Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>