force-app/main/default/objects/LicenseTypeCashierCode__c/fields/FeeisPerUnit__c.field-meta.xml
<CustomField>
    <fullName>FeeisPerUnit__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If this is checked, then the fee charged will be based on the Number of Units, for example, Number of Timeshares.</inlineHelpText>
    <label>Fee is Per Unit</label>
    <type>Checkbox</type>
</CustomField>