force-app/main/default/objects/LicenseTypeCashierCode__c/fields/LicenseType__c.field-meta.xml
<CustomField>
    <fullName>LicenseType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>PacPoint-KN081819 - Created for PVL Phase 1</description>
    <label>License Type</label>
    <referenceTo>LicenseType__c</referenceTo>
    <relationshipLabel>License Type Cashier Codes</relationshipLabel>
    <relationshipName>License_Type_Cashier_Codes</relationshipName>
    <type>Lookup</type>
</CustomField>