force-app/main/default/objects/LicenseTypeCashierCode__c/fields/MethodofLicensure__c.field-meta.xml
<CustomField>
    <fullName>MethodofLicensure__c</fullName>
    <description>PacPoint-KN01162019-Created for PVL Phase 1 Sprint 3</description>
    <label>Method of Licensure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MethodofLicensure</valueSetName>
    </valueSet>
</CustomField>