force-app/main/default/objects/LicenseTypeCashierCode__c/fields/PermitFee__c.field-meta.xml
<CustomField>
    <fullName>PermitFee__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint JF 1/9/25: Created for indication that this cashier code is for permit fee or not</description>
    <label>Permit Fee</label>
    <type>Checkbox</type>
</CustomField>