force-app/main/default/objects/LicenseTypeCashierCode__c/fields/Privilege__c.field-meta.xml
<CustomField>
    <fullName>Privilege__c</fullName>
    <description>08172021 DN: Created for case 15559 to include certain Fees for special privileges</description>
    <label>Privilege</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>U - Prescriptive Authority</fullName>
            </value>
            <value>
                <fullName>X - RX. Of Controlled Substances (Includes Non Controlled)</fullName>
            </value>
            <value>
                <fullName>S - Clinical Social Worker</fullName>
            </value>
            <value>
                <fullName>2 - Parenteral Therapy &amp; Minor Office Procedures</fullName>
            </value>
            <value>
                <fullName>A - Deep Sedation or General Anesthesia</fullName>
            </value>
            <value>
                <fullName>B - Moderate Sedation</fullName>
            </value>
            <value>
                <fullName>C - Charter Tour Operator</fullName>
            </value>
            <value>
                <fullName>D - Diagnostic Pharmaceutical Agents</fullName>
            </value>
            <value>
                <fullName>E- Approved to Use Doctoral Title</fullName>
            </value>
            <value>
                <fullName>H - Home Study</fullName>
            </value>
            <value>
                <fullName>I - Infiltration</fullName>
            </value>
            <value>
                <fullName>L - Infiltration &amp; Block</fullName>
            </value>
            <value>
                <fullName>M - Minor office Procedures</fullName>
            </value>
            <value>
                <fullName>N - Parenteral Therapy</fullName>
            </value>
            <value>
                <fullName>P - Permit to Practice</fullName>
            </value>
            <value>
                <fullName>T - Therapeutic Pharmaceutical Agents</fullName>
            </value>
            <value>
                <fullName>V - Vaccine Administration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>