force-app/main/default/objects/LicenseTypeCashierCode__c/fields/RenewalFeePercentage__c.field-meta.xml
<CustomField>
    <fullName>RenewalFeePercentage__c</fullName>
    <description>PacPoint-FT082919 - Created for PVL phase 1</description>
    <inlineHelpText>Indicates the % or fraction of the Renewal Fees that will get applied.  Applicable if there is a Renewal Fee Period indicated on this record.</inlineHelpText>
    <label>Renewal Fee Percentage</label>
    <precision>11</precision>
    <scale>5</scale>
    <type>Percent</type>
</CustomField>