force-app/main/default/objects/LicenseTypeCashierCode__c/fields/RenewalFeePeriod__c.field-meta.xml
<CustomField>
    <fullName>RenewalFeePeriod__c</fullName>
    <description>PacPoint-FT082919 - Created for PVL phase 1</description>
    <inlineHelpText>Indicates the period of the Biennium or Triennium to which the fractional renewal fees apply for New Licenses.</inlineHelpText>
    <label>Renewal Fee Period</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Biennial 1st Year</fullName>
            </value>
            <value>
                <fullName>Biennial 2nd Year</fullName>
            </value>
            <value>
                <fullName>Triennial 1st Year</fullName>
            </value>
            <value>
                <fullName>Triennial 2nd Year</fullName>
            </value>
            <value>
                <fullName>Triennial 3rd Year</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>