force-app/main/default/objects/LicenseTypeCashierCode__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>PacPoint-FT082819 - Created for PVL Phase 1</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ApplicationStatuses</valueSetName>
    </valueSet>
</CustomField>