force-app/main/default/objects/LicenseTypeCashierCode__c/listViews/LicenseTypeCashierCodes.listView-meta.xml
<ListView>
    <fullName>LicenseTypeCashierCodes</fullName>
    <columns>NAME</columns>
    <columns>LicenseType__c</columns>
    <columns>CashierCode__c</columns>
    <columns>CashierCodeAmount__c</columns>
    <columns>FeeAmount__c</columns>
    <columns>Phase__c</columns>
    <columns>RenewalFeePercentage__c</columns>
    <columns>RenewalFeePeriod__c</columns>
    <columns>Status__c</columns>
    <columns>Type__c</columns>
    <columns>ActiveInactive__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LicenseType__c</field>
        <operation>equals</operation>
        <value>ND</value>
    </filters>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>RNEW - Renewal</value>
    </filters>
    <label>License Type Cashier Codes</label>
</ListView>